adjusted last example and added the 'good' version