@@ -9,7 +9,7 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class DataFileReader {
+public class ImprovedDataFileReader {
 
     private static String UNKNOWN_CODE_ON_FIELD = "Onbekende veld - code combinatie: ";
     private static String UNKNOW_SEX_CODE = "Onbekende geslachts code. Moet 'm' of 'f' zijn";
@@ -19,13 +19,19 @@ public class DataFileReader {
     private static String ILLEGAL_AMOUNT = "ongeldig aantal";
 
     private DataFileParser fileParser = new DataFileParser();
-    private Function<String, PopulationStatisticsLine> lineConsumer = line -> this.parseLine(line);
+    private Function<String, PopulationStatisticsLine> lineConsumer = line -> {
+        PopulationStatisticsLine parsedLine = this.parseLine(line);
+        checkForErrors(parsedLine);
+        return parsedLine;
+    };
     private List<LineError> errorLines = new ArrayList<>();
 
     public void readFile(String fileName) {
         try (Stream<String> stream = Files.lines(Paths.get(fileName))) {
-            errorLines.clear(); // we need to clear this every time we do a readfile otherwise results will mix.
-            List<PopulationStatisticsLine> lines = stream.map(lineConsumer).collect(Collectors.toList());
+            errorLines.clear(); 
+            List<PopulationStatisticsLine> lines = stream.map(lineConsumer)
+                                                         .collect(Collectors
+                                                                  .toList());
 
         } catch (IOException e) {
             System.out.println("Error occured: " + e.getMessage());
@@ -38,10 +44,6 @@ public class DataFileReader {
 
         try {
             line.setRefnisCodeGemeente(Integer.parseInt(tokens[0]));
-            if (line.getRefnisCodeGemeente() > 100000) {
-                errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "gemeente - "
-                        + line.getRefnisCodeGemeente(), line));
-            }
         } catch (NumberFormatException nfe) {
             errorLines.add(new LineError(nfe.getMessage(), line));
         }
@@ -51,36 +53,25 @@ public class DataFileReader {
 
         try {
             line.setRefnisCodeArrondissement(Integer.parseInt(tokens[3]));
-            if (line.getRefnisCodeArrondissement() > 100000) {
-                errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "arrondissement - "
-                        + line.getRefnisCodeArrondissement(), line));
-            }
         } catch (NumberFormatException nfe) {
             errorLines.add(new LineError(nfe.getMessage(), line));
         }
 
-        line.setNaamArrondissementNl(tokens[4]);
+        line.setNaamArrondissementFr(tokens[4]);
         line.setNaamArrondissementNl(tokens[5]);
-
+        
         try {
             line.setRefnisCodeProvincie(Integer.parseInt(tokens[6]));
-            if (line.getRefnisCodeArrondissement() > 100000) {
-                errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "provincie - "
-                        + line.getRefnisCodeProvincie(), line));
-            }
         } catch (NumberFormatException nfe) {
             errorLines.add(new LineError(nfe.getMessage(), line));
         }
 
-        line.setNaamProvincieNl(tokens[7]);
-        line.setNaamProvincieFr(tokens[8]);
+        line.setNaamProvincieFr(tokens[7]);
+        line.setNaamProvincieNl(tokens[8]);
+        
 
         try {
             line.setRefnisCodeGewest(Integer.parseInt(tokens[9]));
-            if (line.getRefnisCodeArrondissement() > 100000) {
-                errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "gewest - "
-                        + line.getRefnisCodeGewest(), line));
-            }
         } catch (NumberFormatException nfe) {
             errorLines.add(new LineError(nfe.getMessage(), line));
         }
@@ -88,44 +79,72 @@ public class DataFileReader {
         line.setNaamGewestNl(tokens[10]);
         line.setNaamGewestFr(tokens[11]);
         line.setGeslacht(tokens[12]);
-        if (!line.getGeslacht().toLowerCase().equals("m")
-                || !line.getGeslacht().toLowerCase().equals("f")) {
-            errorLines.add(new LineError(UNKNOW_SEX_CODE, line));
-        }
 
         line.setNationaliteitsCode(tokens[13]);
-        if (line.getNationaliteitsCode() == null || line.getNationaliteitsCode()
-                                                        .equals("")) {
-            errorLines.add(new LineError(NO_NATIONALITY_CODE, line));
-        }
 
         line.setNationaliteitFr(tokens[14]);
         line.setNationaliteitNl(tokens[15]);
         line.setCodeBurgerlijkeStaat(tokens[16]);
-        if (line.getCodeBurgerlijkeStaat() == null || line.getCodeBurgerlijkeStaat()
-                                                          .equals("")) {
-            errorLines.add(new LineError(NO_MARITAL_STATUS_CODE, line));
-        }
 
         line.setBurgerlijkeStaatFr(tokens[17]);
         line.setBurgerlijkeStaatNl(tokens[18]);
         line.setLeeftijd(Integer.parseInt(tokens[19]));
-        if (line.getLeeftijd() < 1 || line.getLeeftijd() > 150) {
-            errorLines.add(new LineError(ILLEGAL_AGE, line));
-        }
 
         line.setAantal(Integer.parseInt(tokens[20]));
-        if (line.getAantal() < 1) {
-            errorLines.add(new LineError(ILLEGAL_AMOUNT, line));
-        }
         line.setJaartal(tokens[21]);
 
         return line;
     }
 
+    private void checkForErrors(PopulationStatisticsLine line) {
+        if (line.getRefnisCodeGemeente() > 100000) {
+            errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "gemeente - "
+                    + line.getRefnisCodeGemeente(), line));
+        }
+
+        if (line.getRefnisCodeArrondissement() > 100000) {
+            errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "arrondissement - "
+                    + line.getRefnisCodeArrondissement(), line));
+        }
+
+        if (line.getRefnisCodeArrondissement() > 100000) {
+            errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "provincie - "
+                    + line.getRefnisCodeProvincie(), line));
+        }
+
+        if (line.getRefnisCodeArrondissement() > 100000) {
+            errorLines.add(new LineError(UNKNOWN_CODE_ON_FIELD + "gewest - "
+                    + line.getRefnisCodeGewest(), line));
+        }
+
+        if (!line.getGeslacht().toLowerCase().equals("m")
+                || !line.getGeslacht().toLowerCase().equals("f")) {
+            errorLines.add(new LineError(UNKNOW_SEX_CODE, line));
+        }
+
+        if (line.getNationaliteitsCode() == null || line.getNationaliteitsCode()
+                .equals("")) {
+            errorLines.add(new LineError(NO_NATIONALITY_CODE, line));
+        }
+
+        if (line.getCodeBurgerlijkeStaat() == null || line.getCodeBurgerlijkeStaat()
+                .equals("")) {
+            errorLines.add(new LineError(NO_MARITAL_STATUS_CODE, line));
+        }
+
+        if (line.getLeeftijd() < 1 || line.getLeeftijd() > 150) {
+            errorLines.add(new LineError(ILLEGAL_AGE, line));
+        }
+
+        if (line.getAantal() < 1) {
+            errorLines.add(new LineError(ILLEGAL_AMOUNT, line));
+        }
+
+    }
+
     public void simpleReport() {
-        System.out.println("The amount of errors in this file: " + 
-                            this.errorLines.size());
+        System.out.println("The amount of errors in this file: "
+                + this.errorLines.size());
         System.out.println("----------------------------------------------");
 
         errorLines.stream().forEach(line -> {
